Update code base to move from farmers to users and from the production endpoint to subscriptions
