# src/main/kotlin/com/a4a/g8api/models/ResponseBase.kt
@@ -1,6 +1,0 @@
-package com.a4a.g8api.models
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class ResponseBase(val message: String)
