# src/main/kotlin/com/a4a/g8api/routes/AuthenticationRoutes.kt
@@ -1,18 +1,16 @@
 package com.a4a.g8api.routes
 
-
-import com.a4a.g8api.database.FarmerService
+import com.a4a.g8api.database.UsersService
 import com.a4a.g8api.models.AuthRequest
-import com.a4a.g8api.models.ResponseBase
-import com.a4a.g8api.models.farmerStorage
+import com.a4a.g8api.models.ErrorResponse
 import com.auth0.jwt.JWT
 import com.auth0.jwt.algorithms.Algorithm
 import io.ktor.http.*
-import io.ktor.http.HttpHeaders.Date
 import io.ktor.server.application.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
+
 import java.time.Instant.now
 
 fun Route.authenticate(){
@@ -20,11 +18,11 @@ fun Route.authenticate(){
         val request = call.receive<AuthRequest>()
 
         if(request.email.isEmpty() || request.password.isEmpty()){
-            call.respond(HttpStatusCode.BadRequest, ResponseBase("Email and password are required!"))
+            call.respond(HttpStatusCode.BadRequest, ErrorResponse("Email and password are required!"))
         }
 
-        val farmerService = FarmerService()
-        val farmer = farmerService.allFarmers().find { it.email == request.email && it.password == request.password } ?: return@post call.respondText(
+        val userService = UsersService()
+        val user = userService.userByEmailAndPassword (request.email, request.password ) ?: return@post call.respondText(
             "Wrong email or password",
             status = HttpStatusCode.BadRequest
         )
@@ -36,12 +34,10 @@ fun Route.authenticate(){
         val token = JWT.create()
             .withAudience(jwtAudience)
             .withIssuer(jwtIssuer)
-            .withClaim("username", farmer.email)
-            .withClaim("firstname", farmer.firstName)
-            .withClaim("lastname", farmer.lastName)
-            .withClaim("id", farmer.id)
-            //Subscription expires in 1 day
-            .withClaim("subexpiration", now().plusSeconds(3600*24))
+            .withClaim("username", user.email)
+            .withClaim("firstname", user.firstName)
+            .withClaim("lastname", user.lastName)
+            .withClaim("id", user.id)
             //Token expires in 1 hour
             .withExpiresAt(now().plusSeconds(3600))
             .sign(Algorithm.HMAC256(jwtSecret))
